--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "pdfjs-dist": "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.4.168/build/pdf.min.mjs",
-    "pdfjs-dist/": "https://aistudiocdn.com/pdfjs-dist@^5.4.296/"
+    "pdfjs-dist/": "https://aistudiocdn.com/pdfjs-dist@^5.4.296/",
+    "dist/": "https://aistudiocdn.com/dist@^0.1.2/"
   }
 }
 </script>
