feat: Rename project and update branding
Renames the project from "AI Resume & Cover Letter Builder" to "Keju" and updates the application's title, description, and color palette to reflect the new brand identity. This change aligns the codebase with the overarching goals of the Keju platform.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Resume & Cover Letter Builder</title>
+    <title>Keju - AI Career Navigation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -16,18 +16,25 @@
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              primary: '#2563eb', // A strong, friendly blue
-              secondary: '#4f46e5', // A vibrant indigo for accents
-              accent: '#db2777', // A bold pink for specific highlights
-              neutral: '#111827', // Dark gray for primary text
+              'brand-blue': '#3B82F6', // A calm, muted, professional blue
+              'slate-900': '#1E293B', // Deep slate for primary text and elements
+              'slate-700': '#334155',
+              'slate-500': '#64748B',
+              'slate-300': '#CBD5E1',
+              'slate-200': '#E2E8F0',
+              'slate-100': '#F1F5F9',
+              'primary': '#3B82F6', // Alias for brand-blue
+              'secondary': '#1E293B', // Alias for slate-900
+              'accent': '#3B82F6', // Accent is now the primary blue
+              'neutral': '#1E293B', // Neutral is now the primary text color
               'base-100': '#ffffff',
-              'base-200': '#f3f4f6', // Light gray for backgrounds
-              'base-300': '#e5e7eb', // Slightly darker gray
+              'base-200': '#F8FAFC', // Lighter gray for backgrounds
+              'base-300': '#F1F5F9', // Slightly darker gray for borders
             },
             boxShadow: {
-                'lg': '0 10px 15px -3px rgb(0 0 0 / 0.07), 0 4px 6px -4px rgb(0 0 0 / 0.07)',
-                'xl': '0 20px 25px -5px rgb(0 0 0 / 0.07), 0 8px 10px -6px rgb(0 0 0 / 0.07)',
-                '2xl': '0 25px 50px -12px rgb(0 0 0 / 0.15)',
+                'lg': '0 10px 15px -3px rgb(0 0 0 / 0.05), 0 4px 6px -4px rgb(0 0 0 / 0.05)',
+                'xl': '0 20px 25px -5px rgb(0 0 0 / 0.05), 0 8px 10px -6px rgb(0 0 0 / 0.05)',
+                '2xl': '0 25px 50px -12px rgb(0 0 0 / 0.1)',
             },
             animation: {
               'fade-in': 'fadeIn 0.5s ease-in-out',
