feat: Enhance SEO and profile data structure
Update the homepage meta tags for better search engine visibility. Add new fields to the `ProfileData` interface, including `id`, `name`, and `careerPath`, to support profile management and career path planning features. Modify the initial profile creation logic to generate a unique ID and name for new profiles. Adjust the `ProfileForm` component to handle the potential absence of `profileContext.profile` during loading and to correctly determine the `isDirty` state. Improve the prompt for the generation service to explicitly include keyword extraction and achievement prioritization based on the job description.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Keju - AI Career Navigation</title>
+    <title>Keju | AI Career Navigation, Resume Builder & Career Path Planning</title>
+    <meta name="description" content="Keju is an AI-powered career navigation platform. Use our AI Resume Builder and Cover Letter Generator to create tailored applications, and get personalized guidance with our Career Path Planning tools." />
+    <meta name="keywords" content="AI Career Navigation, Resume Builder, Cover Letter Generator, Career Path Planning, AI career coach, job application, professional profile" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
