feat(ai): Integrate application analysis and mentor matching
This commit introduces new AI-powered features for application analysis and mentor matching.

- Enhanced `generationService.ts` to support new prompts for application fit analysis and mentor matching.
- Updated documentation (`docs/Features.md`, `docs/Gemini_API_Integration.md`) to reflect the new capabilities and their integration.
- Added `@vitejs/plugin-react` to `package.json` and updated `index.html` to include CDN paths for Vite and the React plugin, simplifying local development setup.
- Streamlined `vite.config.ts` to use default configurations where possible, improving clarity.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "pdfjs-dist": "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.4.168/build/pdf.min.mjs",
     "pdfjs-dist/": "https://aistudiocdn.com/pdfjs-dist@^5.4.296/",
-    "dist/": "https://aistudiocdn.com/dist@^0.1.2/"
+    "dist/": "https://aistudiocdn.com/dist@^0.1.2/",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.2"
   }
 }
 </script>
