--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     "pdfjs-dist": "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.4.168/build/pdf.min.mjs",
     "pdfjs-dist/": "https://aistudiocdn.com/pdfjs-dist@^5.4.296/",
     "dist/": "https://aistudiocdn.com/dist@^0.1.2/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
-    "vite": "https://aistudiocdn.com/vite@^7.2.2"
+    "vite": "https://aistudiocdn.com/vite@^7.2.2",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
   }
 }
 </script>
